# templateer

./: .devenv.flake.nix  .gitignore  .tmuxp.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  copier.yml  devenv.nix  main.py  mkdocs.yml  pyproject.toml  readme.md  requirements.txt
.devenv/: input-paths.txt  load-exports  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
.devenv/gc/: shell-1-link
.direnv/: devenv-profile-cfbddd93cb43fabbf5955aca7cb5e4d640a65166.rc
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml
.templateer/: cli_entrypoint_template.py  example_function_template.py  simple_class_template.py
docs/: generate.md  update.md  work.md
logs/: __init__.py
src/templateer/: __init__.py  cli.py  core.py  generator.py  main.py  settings.py  testing.py
templateer/logs/: logger.py
templateer/src/: config.py
templateer/templates/python_project/: .env.jinja  .gitignore.jinja  .tmuxp.yaml.jinja  CONTRIBUTING.md.jinja  devenv.nix.jinja  duties.py.jinja  mkdocs.yml.jinja  project_commands.yml  pyproject.toml.jinja
templateer/templates/python_project/.github/workflows/: ci.yml.jinja
templateer/templates/python_project/blog/: index.md.jinja
templateer/templates/python_project/docs/{% if insiders %}insiders{% endif %}/: index.md.jinja  installation.md.jinja
templateer/templates/python_project/scripts/: default_commands.yml  gen_credits.py.jinja  {% if insiders %}insiders.py{% endif %}.jinja
templateer/templates/python_project/src/{{python_package_import_name}}/: config.py
templateer/templates/python_project/src/{{python_package_import_name}}/_internal/: logger.py.jinja
templateer/templates/python_project/tests/: test_api.py.jinja
tests/: helpers.sh  test_licenses.py
