[project]
name = "templateer"
#version = "0.0.1"
#dynamic = ["dependencies"]
requires-python = ">=3.9"
keywords = []
dynamic = ["version"]
#dependencies = []

[project.scripts]
config = "templateer.src.config:print_envs"
main = "templateer.src.main:main"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

